# stocks

./: README.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/admin/ingest/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/stocks/: page.tsx
frontend/app/stocks/[symbol]/: page.tsx
frontend/components/charts/: CompareChart.tsx  PriceChart.tsx
frontend/components/layout/: Navbar.tsx
frontend/components/stocks/: MoverCard.tsx  StatCard.tsx
frontend/components/themes/: theme-toggle.tsx
frontend/components/ui/: badge.tsx
frontend/lib/: api.ts  utils.ts
server/: README.md  main.py  pyproject.toml  requirements.txt  router.py  vercel.json
server/api/: deps.py
server/core/: config.py  logging.py
server/db/: mongodb.py  repository.py
server/models/: stock.py
server/routes/: companies.py  health.py  ingest.py  stocks.py
server/schemas/: stock.py
server/services/: fetcher.py  ingestion.py  stock_service.py  transformer.py
server/tests/: conftest.py  test_api.py  test_transformer.py
server/utils/: scheduler.py
