[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
    "yfinance>=1.2.0",
]
